--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node --experimental-modules --es-module-specifier-resolution=node ./build/index.js",
     "start.dev": "npx nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +19,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@commander-js/extra-typings": "10.0.2",
+    "commander": "10.0.0",
     "csv-parse": "5.3.4"
   }
 }
