--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "BY-NC-ND",
   "devDependencies": {
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
